2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp.c (ntp_long_attack): Use prefs_set instead of doing it on
	arglist level.

	* src/preferences.c (prefs_set): New.

	* src/preferences.h: Add proto accordingly.

	* src/attack.c (attack_network): Use prefs_get() instead of arglist.

2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	First step of using preferences via API instead of via arglists.

	* src/preferences.c (prefs_get): New. Get a preference value via a key.
	(preferences_kb_location): Removed. This should be used via prefs_get
	now.

	* src/preferences.h: Adjust protos accordingly.

	* src/openvassd.c (flush_all_kbs): Use prefs_get() to directly get
	a preference. This allows to drop the function parameter as well.
	(main): Use prefs_get() to directly get a prefernce.

	* src/attack.c (report_kb_failure, init_host_kb, check_kb_access,
	attack_network):  Use prefs_get() to directly get a preference.

2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	First step for switching from preferences stored in a "globals"
	arglist to a specific global module.

	* src/comm.c (comm_send_preferences): Use preferences_get() instead
	of searching though globals arglist.

	* src/ntp.c (ntp_long_attack, ntp_read_prefs): Use preferences_get()
	instead of searching though globals arglist.

	* src/openvassd.c (handle_client, scanner_thread): Use preferences_get()
	instead of searching though globals arglist.

	* src/pluginlaunch.c (update_running_processes, pluginlaunch_init):
	Use preferences_get() instead of searching though globals arglist.
	(pluginlaunch_init): Drop argument "globals" because now it is not used
	anymore.

	* src/pluginlaunch.h: Adjust proto accordingly.

	* src/attack.c (report_kb_failure, launch_plugin, init_host_kb,
	attack_start, check_kb_access, attack_network): Use preferences_get()
	instead of searching though globals arglist.
	(attack_host): Adjust to new proto of pluginlaunch_init().
