@@ -1,5 +1,13 @@
 2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* src/preferences.c (prefs_set): Change behaviour to always take care
+	for memory allocation for both, key and value.
+
+	* src/ntp.c (ntp_long_attack): Free the target after prefs_set.
+	(ntp_read_prefs): Use prefs_set() instead of doing it on arglist level.
+
+2014-10-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* src/ntp.c (ntp_long_attack): Use prefs_set instead of doing it on
 	arglist level.
 
